<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:id="@+id/DischargePlanner_healthIssuesForm">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DischargePlanner_healthIssues"
        android:text="@string/NewPatient_healthIssues"
        android:background="@color/NewPatient_details"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DischargePlanner_Allergies"
        android:hint="@string/NewPatient_allergies"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DischargePlanner_MedicalOrders"
        android:hint="@string/DischargePlanner_medicalOrders"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DischargePlanner_InfectionControl"
        android:hint="@string/DischargePlanner_infectionControl"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DischargePlanner_Comments"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Discharge_comments"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/DischargePlanner_WheelChair"
            android:text="@string/DischargePlanner_wheelChair"
            android:layout_marginTop="5dp"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <CheckBox
            android:id="@+id/DischargePlanner_wheelYes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_yes"
            android:layout_marginTop="5dp"
            />

        <CheckBox
            android:id="@+id/DischargePlanner_wheelNo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_no"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

</LinearLayout>