<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/NewPatient_homeAddressForm">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_HomeAddress"
        android:text="@string/NewPatient_HomeAddress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/NewPatient_details"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_address"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_address"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_city"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_city"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_Province"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_province"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_Postal"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_postalCode"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_Telephone"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_telephone"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AltTelephone"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_altTelephone"
        android:layout_marginTop="10dp"/>
</LinearLayout>