<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
    android:id="@+id/DischargePlanner_languageForm">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DischargePlanner_LanguageReq"
        android:text="@string/DischargePlanner_LanguageReqs"
        android:background="@color/NewPatient_details"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:id="@+id/DischargePlanner_speaksEnglish"
            android:text="@string/DischargePlanner_speaksEnglish"
            android:layout_marginTop="5dp"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <CheckBox
            android:id="@+id/DischargePlanner_speaksYes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_yes"
            android:layout_marginTop="5dp"
            />

        <CheckBox
            android:id="@+id/DischargePlanner_speaksNo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_no"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:id="@+id/DischargePlanner_interpreter"
            android:text="@string/DischargePlanner_interpreter"
            android:layout_marginTop="5dp"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <CheckBox
            android:id="@+id/DischargePlanner_interpreterYes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_yes"
            android:layout_marginTop="5dp"
            />

        <CheckBox
            android:id="@+id/DischargePlanner_interpreterNo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_no"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/DischargePlanner_primaryLanguage"
            android:text="@string/DischargePlanner_primaryLanguage"
            android:layout_marginTop="5dp"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <CheckBox
            android:id="@+id/DischargePlanner_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/DischargePlanner_english"
            android:layout_marginTop="5dp"
            />

        <CheckBox
            android:id="@+id/DischargePlanner_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_french"
            android:layout_marginTop="5dp"
            android:textSize="13dp"
            />
        <CheckBox
            android:id="@+id/DischargePlanner_other"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/DischargePlanner_other"
            android:layout_marginTop="5dp"
            android:textSize="13dp"
            />
    </LinearLayout>





</LinearLayout>