<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/NewPatient_treatmentAddressForm">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_TreatmentAddress"
        android:text="@string/NewPatient_treatmentAddress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/NewPatient_details"
        />
    <LinearLayout
        android:id="@+id/all_day_row"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="4dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="24dip">
        <CheckBox
            android:id="@+id/NewPatient_sameAddress"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="0dip"
            />
        <TextView
            android:id="@+id/NewPatient_sameAddressText"
            android:text="@string/NewPatient_isSameAddress"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|left"
            style="@style/TextAppearance.EditEvent_Small" />
    </LinearLayout>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AlternateAddress"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_address"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AlternateCity"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_city"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AlternateProvince"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_province"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AlternatePostal"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_postalCode"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AlternateTelephone"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_telephone"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_AlternateAltTelephone"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/NewPatient_altTelephone"
        android:layout_marginTop="10dp"/>

</LinearLayout>