<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/NewPatient_healthCardForm">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_healthCard"
        android:text="@string/NewPatient_healthCardDetails"
        android:background="@color/NewPatient_details"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_cardNo"
        android:hint="@string/NewPatient_cardNo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_verionCode"
        android:hint="@string/NewPatient_versionCode"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPatient_issuedProvince"
        android:hint="@string/NewPatient_issuedProvince"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>