<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainScreen"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AppName"
        android:text="@string/AppDisplayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />
    <Button
        android:id="@+id/Main_Physician"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/Main_Physician"
        android:onClick="loginPhysician"
        android:background="@drawable/button_color2"
        />
    <Button
        android:id="@+id/Main_DischargePlanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/Main_DischargePlanner"
        android:onClick="loginDischargePlanner"
        android:background="@drawable/button_color2"/>
    <Button
        android:id="@+id/Main_CCAC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:text="@string/Main_CCAC"
        android:onClick="loginCCACAgent"
        android:background="@drawable/button_color2"/>



</RelativeLayout>
